holy grail added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <main>
     <h1>Ayodeji Solomon Adeyera | WDD 130</h1>
     <img src="images/profile.jpg" alt="Hello, my name is ayodeji" width="200">
-    <p>Hello! My name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding</p>
+    <p>Hello! My name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding.</p>
   </main>
   <footer>
-    <p>&copy;2024 Ayodeji Solomon Adeyera<b>|</b> Nigeria</p>
+    <p>&copy;2024 Ayodeji Solomon Adeyera | Nigeria</p>
   </footer>
   </body>
 </html>
