edited holy grail

--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayodeji Solomon Adeyera | Holy Grail Layout</title>
-    <meta name="description" content="A common layout on the web called the 'Holly Grail">
+    <meta name="description" content="A common layout on the web called the 'Holly Grail'">
     <meta name="author" content="Ayodeji Solomon Adeyera">
 </head>
 <body>
@@ -13,8 +13,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="http://familysearch.org"></a></li>    
-            <li><a href="http://google.com"></a></li>
+            <li><a href="http://familysearch.org">Family History Search</a></li>    
+            <li><a href="http://google.com">Google</a></li>
         </ul>
     </nav>
     <main>
