--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -6,6 +6,7 @@
     <title>Ayodeji Solomon Adeyera | Holy Grail Layout</title>
     <meta name="description" content="A common layout on the web called the 'Holly Grail'">
     <meta name="author" content="Ayodeji Solomon Adeyera">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
