--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Ayodeji Solomon Adeyera | WDD 130</title>
+    <meta name="description" content="This is to prove my proper understanting of my Web Fundamentals">
+    <meta name="author" content="Ayodeji Solomon Adeyera">
+    <link rel="stylesheet" href="week02/styles/styles.css">
   </head>
   <body>
   <header>
@@ -18,6 +21,11 @@
     <img src="images/profile.jpg" alt="Hello, my name is ayodeji" width="200">
     <p>Hello! My name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding.</p>
   </main>
+  <aside>
+    <h2>Nigeria</h2>
+    <img src="images/osun.jpg" alt="Picture of Osun State">
+    <p>Nigeria is a country of remarkable diversity and beauty, home to over 250 ethnic groups and more than 500 languages. Its landscapes range from lush rainforests to the stunning Niger Delta, showcasing the richness of God’s creations. Nigerians are known for their resilience and entrepreneurial spirit, with a growing tech industry often called the “Silicon Valley of Africa.” The country’s commitment to education and religious harmony, where multiple faiths coexist peacefully, highlights values of unity, respect, and lifelong learning. These aspects make Nigeria a truly inspiring and unique nation.</p>
+  </aside>
   <footer>
     <p>&copy;2024 Ayodeji Solomon Adeyera | Nigeria</p>
   </footer>
