--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Ayodeji Solomon Adeyera | WDD 130</title>
-    <meta name="description" content="This is to prove my proper understanting of my Web Fundamentals">
+    <meta name="description" content="Solomon Adeyera's BYU-Idaho WDD130 home page">
     <meta name="author" content="Ayodeji Solomon Adeyera">
-    <link rel="stylesheet" href="week02/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
   <header>
