wwr website added

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img src="images/life.jpg" alt="Life Adventures Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="#">Link</a>
-            <a href="#">LInk</a>
+            <a href="#">Link</a>
             <a href="#">Link</a>
         </nav>
     </header>
@@ -25,12 +25,12 @@
             <h1>Life Adventures</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy Customer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste sapiente nesciunt voluptates voluptatum perspiciatis placeat est ut commodi labore similique?</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adilorem diiid lldlfj fl molestias. Suscipit autem aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
             </article>                    
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam perferendis possimus voluptas iste exercitationem accusamus nam laboriosam molestias. Suscipit autem aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam perferendis possimus voluptas iste exercitationem accusamus nam laboriosam molestias. Suscipit autem aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam perferendis possimus voluptas iste exercitationem accusamus nam laboriosam molestias. Suscipit autem aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
@@ -46,16 +46,12 @@
         <a href="https://www.facebook.com/">
             <img src="images/facebook.png" alt="Facebook Logo">
         </a>
-        </a>
         <a href="https://www.instagram.com/">
             <img src="images/instagram.png" alt="Instagram Logo">
         </a>
         <a href="https://www.x.com/">
             <img src="images/x.png" alt="X Logo">
-
-
-        </div>
-
+        </a>
     </footer>
 </body>
 </html>
