General fixes and adjustments

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Life Adventures About Us Page | for WDD130 - Week03">
+    <meta name="author" content="Ayodeji Solomon Adeyera">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <title>About</title>
+    <title>About Us - Life Adventures</title>
 </head>
 <body>
     <header>
         <img src="images/life.jpg" alt="Life Adventures Logo">
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <a href="about.html">About Us</a>
+            <a href="trips.html">Trips</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <main>
