--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Life Adventures About Us Page | for WDD130 - Week03">
+    <meta name="description" content="Discover the history and thrilling adventures of Life Adventures. Join us for unforgettable white water rafting experiences">
     <meta name="author" content="Ayodeji Solomon Adeyera">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
