--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover the history and thrilling adventures of Life Adventures. Join us for unforgettable white water rafting experiences">
+    <meta name="description"
+        content="Discover the thrilling of Life Adventures. Join us for unforgettable white water rafting experiences. This is my BYU-Idaho WDD130 Week03 About Page">
     <meta name="author" content="Ayodeji Solomon Adeyera">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
     <title>About Us - Life Adventures</title>
 </head>
+
 <body>
     <header>
         <img src="images/life.jpg" alt="Life Adventures Logo">
@@ -22,17 +27,22 @@
         </nav>
     </header>
     <main>
-        <div class="hero">       
+        <div class="hero">
             <img src="images/rafting_hero.jpg" alt="Hero Banner">
             <h1>Life Adventures</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy Customer">
-                <p>Lorem ipsum dolor sit amet, consectetur adilorem diiid lldlfj fl molestias. Suscipit autem aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
-            </article>                    
+                <p>Lorem ipsum dolor sit amet, consectetur adilorem diiid lldlfj fl molestias. Suscipit autem aperiam
+                    sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
+            </article>
         </div>
         <section>
             <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam perferendis possimus voluptas iste exercitationem accusamus nam laboriosam molestias. Suscipit autem aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam perferendis possimus voluptas iste exercitationem accusamus nam laboriosam molestias. Suscipit autem aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam perferendis possimus voluptas iste
+                exercitationem accusamus nam laboriosam molestias. Suscipit autem aperiam sequi excepturi quia quis fuga
+                molestiae asperiores temporibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam
+                perferendis possimus voluptas iste exercitationem accusamus nam laboriosam molestias. Suscipit autem
+                aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
@@ -44,7 +54,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy;2024 Life Adventures  | Ayodeji Solomon Adeyera</p>
+        <p>&copy;2024 Life Adventures | Ayodeji Solomon Adeyera</p>
         <a href="https://www.facebook.com/">
             <img src="images/facebook.png" alt="Facebook Logo">
         </a>
@@ -56,4 +66,5 @@
         </a>
     </footer>
 </body>
+
 </html>
