--- a/wwr/about.html
+++ b/wwr/about.html
@@ -40,7 +40,7 @@
             <h2>History</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam perferendis possimus voluptas iste
                 exercitationem accusamus nam laboriosam molestias. Suscipit autem aperiam sequi excepturi quia quis fuga
-                molestiae asperiores temporibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam
+                molestiae asperiores temporibus.Lorem ipsum jjdolor sit amet, consectetur adipisicing elit. Minima, quam
                 perferendis possimus voluptas iste exercitationem accusamus nam laboriosam molestias. Suscipit autem
                 aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
         </section>
