Home page flex and grid upgrade

--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
         <a href="#">Home</a>
         <a href="wwr/">Rafting Site</a>
         <a href="wwr/site-plan-rafting.html">Rafting Plan</a>
+        <a href="https://www.linkedin.com/in/ayodejiadeyera/">LinkedIn</a>
+        <a href="www.facebook.com/pluralsolo">Facebook</a>
+
     </nav>
   </header>
+  <div class="grid">
   <main>
     <h1>Ayodeji Solomon Adeyera | WDD 130</h1>
     <img src="images/profile.jpg" alt="Hello, my name is ayodeji" width="200">
-    <p>Hello! My name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding.</p>
+    <p>Hello! My name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding. y name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding. y name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding. y name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding. y name is Ayodeji Solomon Adeyera, I love to play the guitar when I am not coding.</p>
   </main>
   <aside>
     <h2>Nigeria</h2>
     <img src="images/osun.jpg" alt="Picture of Osun State">
     <p>Nigeria is a country of remarkable diversity and beauty, home to over 250 ethnic groups and more than 500 languages. Its landscapes range from lush rainforests to the stunning Niger Delta, showcasing the richness of God’s creations. Nigerians are known for their resilience and entrepreneurial spirit, with a growing tech industry often called the “Silicon Valley of Africa.” The country’s commitment to education and religious harmony, where multiple faiths coexist peacefully, highlights values of unity, respect, and lifelong learning. These aspects make Nigeria a truly inspiring and unique nation.</p>
   </aside>
+  </div>
   <footer>
     <p>&copy;2024 Ayodeji Solomon Adeyera | Nigeria</p>
   </footer>
