updated about page

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,15 +15,16 @@
         rel="stylesheet">
     <title>About Us - Life Adventures</title>
 </head>
-
 <body>
     <header>
-        <img src="images/life.jpg" alt="Life Adventures Logo">
+        <img src="images/life.jpg" alt="Life Adventures Logo" class="logo">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <ul class="navigation">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
@@ -32,39 +33,55 @@
             <h1>Life Adventures</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy Customer">
-                <p>Lorem ipsum dolor sit amet, consectetur adilorem diiid lldlfj fl molestias. Suscipit autem aperiam
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ea nihil voluptatum animi deserunt nesciunt dolores accusantium rem, tempore facere!Lorem ipsum dolor sit amet, consectetur adilorem diiid lldlfj fl molestias. Suscipit autem aperiam
                     sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
             </article>
         </div>
-        <section>
-            <h2>History</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, quam perferendis possimus voluptas iste
-                exercitationem accusamus nam laboriosam molestias. Suscipit autem aperiam sequi excepturi quia quis fuga
-                molestiae asperiores temporibus.Lorem ipsum jjdolor sit amet, consectetur adipisicing elit. Minima, quam
-                perferendis possimus voluptas iste exercitationem accusamus nam laboriosam molestias. Suscipit autem
-                aperiam sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
+        <section class="history">
+            <h2>Our History</h2>
+            <div class="story">
+                <p>Ipsum dolor sit amet consectetur adipisicing elit. Sit, quibusdam. dolor sit amet consectetur adipisicing elit. Similique earum cupiditate, adipisci inventore neque error a velit officia unde. Cum?</p>
+                <img src="images/our-team.jpg" alt="Our Team">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, ipsum.dolor sit amet consectetur adipisicing elit. Doloremque fugiat suscipit possimus id tempora, qui placeat at nobis illum perspiciatis?</p>
+            </div>
         </section>
-        <section>
+        <section class="adventure">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting_1.jpg" alt="People Rafting">
-            <img src="images/rafting_2.jpg" alt="Rafting Session">
-            <img src="images/rafting_3.jpg" alt="Rafters">
-            <img src="images/rafting_4.jpg" alt="Excited Rafters">
-            <img src="images/rafting_5.jpg" alt="Rafting Enthusiast and Experts">
+            <div class="gallery">
+            <figure><img src="images/rafting_1.jpg" alt="People Rafting">
+                <figcaption>People Rafting</figcaption>
+            </figure>
+            <figure><img src="images/rafting_2.jpg" alt="Rafting Session">
+                <figcaption>Rafting Session</figcaption>
+            </figure>
+            <figure><img src="images/rafting_3.jpg" alt="Rafters having fun">
+                <figcaption>Fun Rafters</figcaption>
+            </figure>
+            <figure><img src="images/rafting_4.jpg" alt="Excited Rafters">
+                <figcaption>Excited Rafter</figcaption>
+            </figure>
+            <figure><img src="images/rafting_5.jpg" alt="Rafting Enthusiast and Experts">
+                <figcaption>Experts and Enthusiast</figcaption>
+            </figure>
+        </div>
         </section>
     </main>
     <footer>
-        <p>&copy;2024 Life Adventures | Ayodeji Solomon Adeyera</p>
-        <a href="https://www.facebook.com/">
+        <p>©2024 Life Adventures | Ayodeji Solomon Adeyera</p>
+        <nav class="footer-social">
+            <a href="https://www.facebook.com/">
             <img src="images/facebook.png" alt="Facebook Logo">
-        </a>
-        <a href="https://www.instagram.com/">
-            <img src="images/instagram.png" alt="Instagram Logo">
-        </a>
-        <a href="https://www.x.com/">
-            <img src="images/x.png" alt="X Logo">
-        </a>
+            </a>
+            <a href="https://www.instagram.com/">
+                <img src="images/instagram.png" alt="Instagram Logo">
+            </a>
+            <a href="https://www.x.com/">
+                <img src="images/x.png" alt="X Logo">
+            </a>
+        </nav>
+        
     </footer>
 </body>
 
 </html>
+
