Adjusted to Meetup Rubric

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,16 +33,15 @@
             <h1>Life Adventures</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy Customer">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores ea nihil voluptatum animi deserunt nesciunt dolores accusantium rem, tempore facere!Lorem ipsum dolor sit amet, consectetur adilorem diiid lldlfj fl molestias. Suscipit autem aperiam
-                    sequi excepturi quia quis fuga molestiae asperiores temporibus.</p>
+                <p>At Life Adventures, we believe that the best way to experience the thrill of nature is by diving right into it! Our passion for white water rafting drives us to provide unforgettable experiences on some of the most exhilarating rivers. Whether you’re a seasoned rafter or a first-timer, our expert guides ensure a safe and exciting adventure every time. Join us and discover the rush of conquering the rapids, the beauty of untouched landscapes, and the camaraderie of fellow adventurers. Life is an adventure – let’s make it unforgettable together!</p>
             </article>
         </div>
         <section class="history">
             <h2>Our History</h2>
             <div class="story">
-                <p>Ipsum dolor sit amet consectetur adipisicing elit. Sit, quibusdam. dolor sit amet consectetur adipisicing elit. Similique earum cupiditate, adipisci inventore neque error a velit officia unde. Cum?</p>
+                <p>Life Adventures was born out of a love for the great outdoors and a desire to share that passion with others. Our journey began over a decade ago when a group of friends, united by their love for white water rafting, decided to turn their weekend hobby into a full-fledged adventure company. What started as a small operation with a single raft has grown into a thriving business, offering a variety of rafting experiences on some of the most challenging and scenic rivers.</p>
                 <img src="images/our-team.jpg" alt="Our Team">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, ipsum.dolor sit amet consectetur adipisicing elit. Doloremque fugiat suscipit possimus id tempora, qui placeat at nobis illum perspiciatis?</p>
+                <p>Over the years, we’ve expanded our team to include some of the most experienced and enthusiastic guides in the industry. Our commitment to safety, environmental stewardship, and creating memorable experiences has earned us a loyal following of adventure seekers. As we continue to grow, we remain dedicated to our mission of providing top-notch rafting adventures while preserving the natural beauty of the rivers we love. Join us on this journey and become a part of the Life Adventures story!</p>
             </div>
         </section>
         <section class="adventure">
