Dev tools correction 1

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Discover the thrilling of Life Adventures. Join us for unforgettable white water rafting experiences. This is my BYU-Idaho WDD130 Week03 About Page">
+    <meta name="description" content="Discover the thrilling of Life Adventures. Join us for unforgettable white water rafting experiences. This is my BYU-Idaho WDD130 Week03 About Page">
     <meta name="author" content="Ayodeji Solomon Adeyera">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <title>About Us - Life Adventures</title>
 </head>
 <body>
@@ -47,29 +43,29 @@
         <section class="adventure">
             <h2>Adventure Awaits You!</h2>
             <div class="gallery">
-            <figure><img src="images/rafting_1.jpg" alt="People Rafting">
-                <figcaption>People Rafting</figcaption>
-            </figure>
-            <figure><img src="images/rafting_2.jpg" alt="Rafting Session">
-                <figcaption>Rafting Session</figcaption>
-            </figure>
-            <figure><img src="images/rafting_3.jpg" alt="Rafters having fun">
-                <figcaption>Fun Rafters</figcaption>
-            </figure>
-            <figure><img src="images/rafting_4.jpg" alt="Excited Rafters">
-                <figcaption>Excited Rafter</figcaption>
-            </figure>
-            <figure><img src="images/rafting_5.jpg" alt="Rafting Enthusiast and Experts">
-                <figcaption>Experts and Enthusiast</figcaption>
-            </figure>
-        </div>
+                <figure><img src="images/rafting_1.jpg" alt="People Rafting">
+                    <figcaption>People Rafting</figcaption>
+                </figure>
+                <figure><img src="images/rafting_2.jpg" alt="Rafting Session">
+                    <figcaption>Rafting Session</figcaption>
+                </figure>
+                <figure><img src="images/rafting_3.jpg" alt="Rafters having fun">
+                    <figcaption>Fun Rafters</figcaption>
+                </figure>
+                <figure><img src="images/rafting_4.jpg" alt="Excited Rafters">
+                    <figcaption>Excited Rafter</figcaption>
+                </figure>
+                <figure><img src="images/rafting_5.jpg" alt="Rafting Enthusiast and Experts">
+                    <figcaption>Experts and Enthusiast</figcaption>
+                </figure>
+            </div>
         </section>
     </main>
     <footer>
-        <p>©2024 Life Adventures | Ayodeji Solomon Adeyera</p>
+        <p>&copy;2024 Life Adventures | Ayodeji Solomon Adeyera</p>
         <nav class="footer-social">
             <a href="https://www.facebook.com/">
-            <img src="images/facebook.png" alt="Facebook Logo">
+                <img src="images/facebook.png" alt="Facebook Logo">
             </a>
             <a href="https://www.instagram.com/">
                 <img src="images/instagram.png" alt="Instagram Logo">
@@ -78,9 +74,6 @@
                 <img src="images/x.png" alt="X Logo">
             </a>
         </nav>
-        
     </footer>
 </body>
-
 </html>
-
