--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -66,7 +66,7 @@
                           Website Suggestion
                         </label><br>
                     </div>                                          <textarea id="message" name="message" rows="10" placeholder=""></textarea><br>
-                    <input type="checkbox" id="newsletter" name="newsletter">
+                    <input type="checkbox" id="newsletter_cta" name="newsletter">
                     <label for="newsletter_cta">Please subscribe me for the monthly newsletter</label><br>
                     <button type="submit">Send Message</button>
                 </div>
