--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <title>Meet Our Staff!</title>
+    <title>Contact Us - Life Adventures</title>
 </head>
 <body>
     <header>
@@ -74,7 +74,7 @@
             </section>
             </div>        
         <section class="adventure">
-            <h2>Adventure Awaits You!</h2>
+            <h2>Meet Our Staff!</h2>
             <div class="gallery">
                 <figure><img src="images/staff_1.jpg" alt="Ann Bush">
                     <figcaption>Ann Bush</figcaption>
