contact form spacing

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -45,8 +45,8 @@
             </aside>
             <section class="contact_form">
                 <form>
-                <h2>Contact Us Form</h2>
-                <p>Fields marked with an * are required</p>
+                <h2>Contact Us Form</h2><br>
+                <p>Fields marked with an * are required</p><br>
                 <div class="container">
                     <label class="container_inp">Name * <input type="text" id="name" name="name"></label><br>
                     <label class="container_inp">Email * <input type="text" id="email" name="email"></label><br>
