--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contact Us Page - We would like to hear from you! Contact Us Now!">
+    <meta name="description" content="Discover the thrilling of Life Adventures. Join us for unforgettable white water rafting experiences. This is my BYU-Idaho WDD130 Week03 About Page">
     <meta name="author" content="Ayodeji Solomon Adeyera">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <title>Contact Us - Life Adventures</title>
+    <title>Our Trips - Life Adventures</title>
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
@@ -97,7 +98,7 @@
     <footer>
         <p>&copy;2024 Life Adventures | Ayodeji Solomon Adeyera</p>
         <nav class="footer-social">
-            <a href="https://app.moqups.com/arng1j3hAPyGKw2Q3icm34yI3uEvOgCZ/view/page/ad64222d5">Contact Us Wireframe</a>
+            <a href="https://app.visily.ai/projects/7a5a3f85-a00a-494c-801d-4085d58f5f9a/boards/1383319">Contact Us Wireframe</a>
             <a href="https://www.facebook.com/">
                 <img src="images/facebook.png" alt="Facebook Logo">
             </a>
