--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover the thrilling of Life Adventures. Join us for unforgettable white water rafting experiences. This is my BYU-Idaho WDD130 Week03 About Page">
+    <meta name="description" content="Home - Discover the thrilling of Life Adventures. Join us for unforgettable white water rafting experiences. This is my BYU-Idaho WDD130 Week03 About Page">
     <meta name="author" content="Ayodeji Solomon Adeyera">
     <link rel="stylesheet" href="styles/rafting.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
