--- a/wwr/index.html
+++ b/wwr/index.html
@@ -17,7 +17,7 @@
         <img src="images/life.jpg" alt="Life Adventures Logo" class="logo">
         <nav>
             <ul class="navigation">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact</a></li>
