--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -19,7 +19,7 @@
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
+                <li><a href="trips.html" class="active">Trips</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
